--- a/hook_project/templates/_footer.html
+++ b/hook_project/templates/_footer.html
@@ -1,3 +1,5 @@
 {% load i18n %}
 
-{% trans "&copy; 2014 &lt;your company here&gt;" %}
+{% trans "&copy; " %}
+{% now "Y" %}
+{% trans " Open edX Contributor Program" %}
