Add link to badge list page

--- a/hook_project/templates/homepage.html
+++ b/hook_project/templates/homepage.html
@@ -42,5 +42,5 @@
 {% block column-3 %}
     <h2>Contributor Badges</h2>
     <p>Here are the badges available for contributors to OPEN edX.</p>
-    <p><a class="btn btn-default" href="#">See badges &raquo;</a></p>
+    <p><a class="btn btn-default" href="/bk/badges/">See badges &raquo;</a></p>
 {% endblock %}
