--- a/hook_project/templates/badgekit_webhooks/claim_page.html
+++ b/hook_project/templates/badgekit_webhooks/claim_page.html
@@ -15,7 +15,7 @@
     <p class="lead">Claim your rightful place among the noble, the steadfast, and the brave: the fellowship of edX code contributors.</p>
 
     <p class="badge-image">
-      <img src="{{ badge_image }}">
+      <img src="{{ badge.image }}">
     </p>
 
     <p><a class="btn btn-lg btn-success" href="javascript:issueBadge();" role="button">Send to backpack</a></p>
@@ -24,12 +24,12 @@
   <div class="row marketing">
     <div class="col-lg-6">
       <h4>About edX badges</h4>
-      <p><a href="">Read all about</a> edX's commitment to open badges.</p>
+      <p><a href="{{ issuer.url }}">Read all about</a> edX's commitment to open badges.</p>
     </div>
 
     <div class="col-lg-6">
       <h4>Criteria for this badge</h4>
-      <p>Others can do one of <a href="#">these awesome tasks</a> to join you in earning this badge.</p>
+      <p>Others can do one of <a href="{{ badge.criteria }}">these awesome tasks</a> to join you in earning this badge.</p>
     </div>
 
   </div>
