--- a/hook_project/templates/_account_bar.html
+++ b/hook_project/templates/_account_bar.html
@@ -12,7 +12,8 @@
             <ul class="dropdown-menu">
                 <li><a href="{% url "account_settings" %}"><i class="fa fa-user"></i> {% trans "Settings" %}</a></li>
                 {% if request.user.is_staff %}
-                    <li><a href="{% url THEME_ADMIN_URL|default:"admin:index" %}"><i class="fa fa-cog"></i> {% trans "Admin" %}</a></li>
+                    <li><a href="{% url "badgekit-admin" %}"><i class="fa fa-cog"></i> {% trans "Badge Admin" %}</a></li>
+                    <li><a href="{% url THEME_ADMIN_URL|default:"admin:index" %}"><i class="fa fa-cog"></i> {% trans "Django Admin" %}</a></li>
                 {% endif %}
                 <li class="divider"></li>
                 <li>
